fix InsertTab and DeleteTab in ScMarkData, tdf#72240

Change-Id: Id3168e4cac6c52b36833b454518cce55b51e36b4